Fixed visibility issue with text shadow on header

--- a/app/scss/_home.scss
+++ b/app/scss/_home.scss
@@ -67,7 +67,7 @@
 }
 
 .colored {
-  color: var(--cyan);
+  color: $cyan;
 }
 
 .sub-text {
